--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:dictionary": "node scripts/build-dictionary-pack.mjs"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "flexsearch": "^0.8.212",
     "framer-motion": "^12.29.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "typo-js": "^1.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
